tests/errors/intrinsics12.f90
program intrinsics12
    print *, max(12, 13.94)
end program